@@ -1,3 +1,6 @@
+20240819
+*Improved handling of moved ports.
+
 20240728
 *Improved man page.
 
